ебка с createSlice - переписал для загрузки карточек и добавления в корзину. Долго ебался из-за какой-то ошибки, пофиксил, но походу просто изначально себя перемудрил

--- a/src/components/authModall/authModal.css
+++ b/src/components/authModall/authModal.css
@@ -90,6 +90,10 @@
 	width: 100%;
 	border-radius: 4px;
 }
+.other-modal {
+	display: grid;
+	justify-items: center;
+}
 .other-modal__item {
 	font: 14px/16px arial;
 	color: #888;
