--- a/src/components/itemCart/itemCart.css
+++ b/src/components/itemCart/itemCart.css
@@ -1,14 +1,11 @@
 .cart__body {
-	/* max-width: 500px; */
 	border-radius: 10px;
 	overflow: hidden;
-	padding: 20px;
 	background-color: rgb(169, 248, 66);
 	transition: all 0.3s ease 0s;
 	box-shadow: 0 5px 5px rgba(56, 55, 55, 0.281);
 	display: flex;
 	flex-direction: column;
-	gap: 10px;
 }
 
 .cart__body:hover{
@@ -19,7 +16,6 @@
 }
 
 .cart__image {
-	border-radius: 10px;
 	overflow: hidden;
 	position: relative;
 	padding-bottom: 100%;
@@ -37,13 +33,20 @@
 }
 
 .cart__content {
+	padding: 10px 15px 15px;
 	flex: 1 1 auto;
 	display: flex;
 	flex-direction: column;
 	gap: 10px;
 }
+.cart__title{
+	font-size: 19px;
+	line-height: 1;
+}
 .cart__text {
 	flex: 1 1 auto;
+	color: rgb(87, 78, 78);
+	line-height: calc(19 / 15);
 }
 
 .cart__footer {
