--- a/src/components/wok/wok.css
+++ b/src/components/wok/wok.css
@@ -1,22 +1,24 @@
 .wok {
 	position: fixed;
-	width: 100%;
-	min-height: 100vh;
-	top: 0;
 	left: 0;
-	background-color: rgba(0, 0, 0, 0.308);
-	z-index: 500;
-	padding-top: 30px;
-	padding-bottom: 30px;
+   right: 0;
+   top: 0;
+   bottom: 0;
+	background: rgba(0,0,0,.8);
 	display: flex;
-	align-items: center;
-	justify-content: center;
+   flex-direction: column;
+   justify-content: center;
+	z-index: 100;
+}
+.wok__wrap{
+	overflow-y: auto;
 }
 .wok__body{
 	width: 330px;
-	min-height: 100%;
+	min-height: 60vh;
+	margin: 0 auto;
 	background-color: #fff;
-	border-radius: 10px;
+	border-radius: 10px 10px 0px 0px;
 	overflow: hidden;
 	position: relative;
 }
@@ -115,6 +117,13 @@
 }
 /* =========== */
 .footer-wok{
+	width: 330px;
+	margin: 0px auto;
+	background-color: #fff;
+	position: sticky;
+	border-radius: 0px 0px 10px 10px;
+	box-shadow: 0 2px 19px rgb(0 0 0 / 9%);
+	bottom: 0;
 	height: 64px;
 	display: flex;
 	align-items: center;
